riff: 8-bit paletted video is format RGB8P, not RGB8_PALETTED

https://bugzilla.gnome.org/show_bug.cgi?id=686046